--- a/TP3_Template/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/TP3_Template/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -555,6 +555,37 @@ K2Node_FunctionEntry.Inputs=True
 K2Node_FunctionEntry.Outputs=True
 SpikeWallBack_C.TransformCommon=True
 SpikeWallBack_C.Default=True
+SideScrollerCharacter_C.Character Movement (General Settings)=True
+SideScrollerCharacter_C.Character Movement: Walking=True
+SideScrollerCharacter_C.Character Movement: Jumping / Falling=True
+SideScrollerCharacter_C.Character Movement (Networking)=True
+SideScrollerCharacter_C.Character Movement: Swimming=True
+SideScrollerCharacter_C.Character Movement: Flying=True
+SideScrollerCharacter_C.Character Movement: Custom Movement=True
+SideScrollerCharacter_C.Character Movement (Rotation Settings)=True
+SideScrollerCharacter_C.Character Movement: Physics Interaction=True
+SideScrollerCharacter_C.Character Movement=True
+SideScrollerCharacter_C.Character Movement: Avoidance=True
+SideScrollerCharacter_C.RootMotion=True
+SideScrollerCharacter_C.Character Movement: NavMesh Movement=True
+SideScrollerCharacter_C.NavMovement=True
+SideScrollerCharacter_C.Velocity=True
+SideScrollerCharacter_C.PlanarMovement=True
+SideScrollerCharacter_C.MovementComponent=True
+SideScrollerCharacter_C.Shape=True
+SideScrollerCharacter_C.Navigation=True
+JumpWall_C.Tick=True
+JumpWall_C.Rendering=True
+JumpWall_C.Replication=True
+JumpWall_C.Collision=True
+JumpWall_C.Input=True
+JumpWall_C.Actor=True
+K2Node_CallFunction.Inputs=True
+K2Node_CallFunction.Outputs=True
+Actor.TransformCommon=True
+Actor.Surface Materials=True
+Actor.Geometry=True
+Actor.Surface Properties=True
 
 [AssetEditorSubsystem]
 CleanShutdown=True
@@ -569,24 +600,29 @@ EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Obj
 Object=
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
-SideScrollerCharacter_C=
-Character=
-Pawn=
+SideScrollerCharacter_C="\"Object.\" \"Object.\" "
+Character="\"Object.\" \"Object.\" "
+Pawn="\"Object.\" \"Object.\" "
 SpikeWallFace_C=
-SceneComponent=
-ActorComponent=
+SceneComponent="\"Object.CapsuleHalfHeight\" \"Object.CapsuleHalfHeight\" "
+ActorComponent="\"Object.CapsuleHalfHeight\" \"Object.CapsuleHalfHeight\" "
 SpikeWallBack_C=
+CapsuleComponent="\"Object.CapsuleHalfHeight\" \"Object.CapsuleHalfHeight\" "
+ShapeComponent="\"Object.CapsuleHalfHeight\" \"Object.CapsuleHalfHeight\" "
+PrimitiveComponent="\"Object.CapsuleHalfHeight\" \"Object.CapsuleHalfHeight\" "
 
 [ContentBrowserRecent]
 MRUItem0=/Game/SideScrollerBP/Blueprints/SideScrollerCharacter
-MRUItem1=/Game/SideScrollerBP/Blueprints/SpikeWallFace
-MRUItem2=/Game/SideScrollerBP/Blueprints/SpikeWallBack
-MRUItem3=/Game/SideScrollerBP/Blueprints/SpikeTrap
-MRUItem4=/Game/SideScrollerBP/Maps/SwitchToLevel02
-MRUItem5=/Game/SideScrollerBP/Maps/SwitchToLevel03
-MRUItem6=/Game/SideScrollerBP/Maps/SwitchLevel
+MRUItem1=/Game/SideScrollerBP/Blueprints/JumpWall
+MRUItem2=/Game/SideScrollerBP/Blueprints/SpikeWallFace
+MRUItem3=/Game/SideScrollerBP/Blueprints/SpikeWallBack
+MRUItem4=/Game/SideScrollerBP/Blueprints/SpikeTrap
+MRUItem5=/Game/SideScrollerBP/Maps/SwitchToLevel02
+MRUItem6=/Game/SideScrollerBP/Maps/SwitchToLevel03
+MRUItem7=/Game/SideScrollerBP/Maps/SwitchLevel
 
 [PlacementMode]
+RecentlyPlaced=/Game/SideScrollerBP/Blueprints/SideScrollerCharacter.SideScrollerCharacter;
 RecentlyPlaced=/Game/SideScrollerBP/Blueprints/SpikeWallBack.SpikeWallBack;
 RecentlyPlaced=/Game/SideScrollerBP/Blueprints/SpikeWallFace.SpikeWallFace;
 RecentlyPlaced=/Game/SideScrollerBP/Blueprints/SpikeTrap.SpikeTrap;
@@ -594,8 +630,8 @@ RecentlyPlaced=/Game/SideScrollerBP/Maps/SwitchToLevel02.SwitchToLevel02;
 RecentlyPlaced=/Game/SideScrollerBP/Maps/SwitchToLevel03.SwitchToLevel03;
 
 [RootWindow]
-ScreenPosition=X=320.000 Y=160.000
-WindowSize=X=1280.000 Y=720.000
+ScreenPosition=X=2408.000 Y=171.000
+WindowSize=X=1070.000 Y=720.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -626,7 +662,7 @@ FourPanes2x2.Viewport 2.MaximizedViewport=FourPanes2x2.Viewport 2.Viewport1
 bHideUnrelatedNodes=False
 
 [Directories2]
-UNR=D:/VG Projects/TP3_Template/Content/Levels
+UNR=../../../../../../Users/Alexis/Documents/GitHub/TP3_LevelDesign_AD_GB_FL/TP3_Template/Content/Levels
 BRUSH=D:/VG Projects/TP3_Template/Content/
 FBX=D:/VG Projects/TP3_Template/Content/
 FBXAnim=D:/VG Projects/TP3_Template/Content/
@@ -1342,16 +1378,16 @@ ExternalImagePicker.TimeStamp=2020.01.08-02.38.20
 ExternalImagePicker.LastCompileMethod=Unknown
 HierarchicalLODOutliner.TimeStamp=2020.09.23-00.46.07
 HierarchicalLODOutliner.LastCompileMethod=External
-Voice.TimeStamp=2020.01.08-02.38.30
-Voice.LastCompileMethod=Unknown
-MovieSceneCapture.TimeStamp=2020.01.08-02.38.24
-MovieSceneCapture.LastCompileMethod=Unknown
+Voice.TimeStamp=2020.09.23-00.46.13
+Voice.LastCompileMethod=External
+MovieSceneCapture.TimeStamp=2020.09.23-00.46.08
+MovieSceneCapture.LastCompileMethod=External
 NewLevelDialog.TimeStamp=2020.01.08-02.38.24
 NewLevelDialog.LastCompileMethod=Unknown
 HierarchicalLODUtilities.TimeStamp=2020.01.08-02.38.21
 HierarchicalLODUtilities.LastCompileMethod=Unknown
-BlueprintGraph.TimeStamp=2020.01.08-02.38.17
-BlueprintGraph.LastCompileMethod=Unknown
+BlueprintGraph.TimeStamp=2020.09.23-00.45.49
+BlueprintGraph.LastCompileMethod=External
 
 [MessageLog]
 LastLogListing=BlueprintLog
@@ -1365,5 +1401,13 @@ K2Node_VariableSet=K2Node_VariableGet.DefaultValueCategory.None,
 SceneComponent=K2Node_VariableGet.DefaultValueCategory.None,
 SpikeWallBack_C=
 FloatProperty=K2Node_VariableGet.DefaultValueCategory.None,
+CapsuleComponent=K2Node_VariableGet.DefaultValueCategory.None,
+
+[AssetEditorToolkitTabLocation]
+/Game/SideScrollerBP/Blueprints/SideScrollerCharacter.SideScrollerCharacter=1
+/Game/SideScrollerBP/Blueprints/JumpWall.JumpWall=1
+
+[DetailCategoriesAdvanced]
+K2Node_VariableGet.Variable=False
 
 
