Setter le Projet
Genevieve - Installation du projet

--- a/TP3_Template/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/TP3_Template/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -151,7 +151,7 @@ ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/SideScrollerBP/Maps/Level1/Level1
+LastLevel=/Game/Levels/TP3_YourName_Level01
 
 [DetailCategories]
 WorldSettings.PrecomputedVisibility=True
@@ -685,7 +685,7 @@ Actor.Replication=True
 Actor.Actor=True
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [WorldBrowser]
 DisplayPaths=False
