--- a/TP3_Template/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/TP3_Template/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -116,19 +116,19 @@ CurrentRotGridSize=6
 CurrentPosGridSize=1
 
 [MRU]
-MRUItem0=/Game/Levels/TP3_GenevieveBellemare_Level01
-MRUItem1=/Game/Levels/TP3_AlexisDesbiens_Level02
-MRUItem2=/Game/Levels/TP3_YourName_Level01
-MRUItem3=/Game/SideScrollerBP/Maps/Level1/Level1
-MRUItem4=/Game/SideScrollerBP/Maps/Level1/Level
-MRUItem5=/Game/SideScrollerBP/Maps/SideScrollerExampleMap
-MRUItem6=/Game/SideScrollerBP/Maps/Level2/Level
-MRUItem7=/Game/SideScrollerBP/Maps/Level3/Level3
-MRUItem8=/Game/Levels/TP3_YourName_Level03
+MRUItem0=/Game/Levels/TP3_YourName_Level03
+MRUItem1=/Game/Levels/TP3_GenevieveBellemare_Level01
+MRUItem2=/Game/Levels/TP3_AlexisDesbiens_Level02
+MRUItem3=/Game/Levels/TP3_YourName_Level01
+MRUItem4=/Game/SideScrollerBP/Maps/Level1/Level1
+MRUItem5=/Game/SideScrollerBP/Maps/Level1/Level
+MRUItem6=/Game/SideScrollerBP/Maps/SideScrollerExampleMap
+MRUItem7=/Game/SideScrollerBP/Maps/Level2/Level
+MRUItem8=/Game/SideScrollerBP/Maps/Level3/Level3
 MRUItem9=/Game/Levels/TP3_YourName_Level02
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/SideScrollerBP/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/Levels
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -153,7 +153,7 @@ ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/Levels/TP3_GenevieveBellemare_Level01
+LastLevel=/Game/Levels/TP3_YourName_Level03
 
 [DetailCategories]
 WorldSettings.PrecomputedVisibility=True
@@ -743,9 +743,9 @@ EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Obj
 Object=
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
-SideScrollerCharacter_C=
-Character=
-Pawn=
+SideScrollerCharacter_C="\"Object.Strengh\" \"Object.Strengh\" "
+Character="\"Object.Strengh\" \"Object.Strengh\" "
+Pawn="\"Object.Strengh\" \"Object.Strengh\" "
 SpikeWallFace_C=
 SceneComponent=
 ActorComponent=
@@ -757,23 +757,24 @@ PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume=
 
 [ContentBrowserRecent]
-MRUItem0=/Game/SideScrollerBP/Blueprints/SideScrollerCharacter
-MRUItem1=/Game/Levels/TP3_GenevieveBellemare_Level01
-MRUItem2=/Game/Levels/TP3_AlexisDesbiens_Level02
-MRUItem3=/Game/SideScrollerBP/Blueprints/MovingWallFace1
-MRUItem4=/Game/Levels/TP3_YourName_Level01
-MRUItem5=/Game/SideScrollerBP/Maps/Level1/Level1
-MRUItem6=/Game/SideScrollerBP/Maps/Level1/Level
-MRUItem7=/Game/SideScrollerBP/Maps/SideScrollerExampleMap
-MRUItem8=/Game/SideScrollerBP/Maps/Level2/Level
-MRUItem9=/Game/SideScrollerBP/Maps/Level3/Level3
-MRUItem10=/Game/SideScrollerBP/Blueprints/JumpWall
-MRUItem11=/Game/SideScrollerBP/Blueprints/SpikeWallFace
-MRUItem12=/Game/SideScrollerBP/Blueprints/SpikeWallBack
-MRUItem13=/Game/SideScrollerBP/Blueprints/SpikeTrap
-MRUItem14=/Game/SideScrollerBP/Maps/SwitchToLevel02
-MRUItem15=/Game/SideScrollerBP/Maps/SwitchToLevel03
-MRUItem16=/Game/SideScrollerBP/Maps/SwitchLevel
+MRUItem0=/Game/Levels/TP3_YourName_Level03
+MRUItem1=/Game/SideScrollerBP/Blueprints/SideScrollerCharacter
+MRUItem2=/Game/Levels/TP3_GenevieveBellemare_Level01
+MRUItem3=/Game/Levels/TP3_AlexisDesbiens_Level02
+MRUItem4=/Game/SideScrollerBP/Blueprints/MovingWallFace1
+MRUItem5=/Game/Levels/TP3_YourName_Level01
+MRUItem6=/Game/SideScrollerBP/Maps/Level1/Level1
+MRUItem7=/Game/SideScrollerBP/Maps/Level1/Level
+MRUItem8=/Game/SideScrollerBP/Maps/SideScrollerExampleMap
+MRUItem9=/Game/SideScrollerBP/Maps/Level2/Level
+MRUItem10=/Game/SideScrollerBP/Maps/Level3/Level3
+MRUItem11=/Game/SideScrollerBP/Blueprints/JumpWall
+MRUItem12=/Game/SideScrollerBP/Blueprints/SpikeWallFace
+MRUItem13=/Game/SideScrollerBP/Blueprints/SpikeWallBack
+MRUItem14=/Game/SideScrollerBP/Blueprints/SpikeTrap
+MRUItem15=/Game/SideScrollerBP/Maps/SwitchToLevel02
+MRUItem16=/Game/SideScrollerBP/Maps/SwitchToLevel03
+MRUItem17=/Game/SideScrollerBP/Maps/SwitchLevel
 
 [PlacementMode]
 RecentlyPlaced=/Game/SideScrollerBP/Blueprints/SpikeWallFace.SpikeWallFace;
