Level 01 Ajutements de textures

--- a/TP3GreyblocksEquipe7/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/TP3GreyblocksEquipe7/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -890,6 +890,9 @@ MRUItem18=/Game/SideScrollerBP/Maps/Level1/Level
 MRUItem19=/Game/SideScrollerBP/Maps/SideScrollerExampleMap
 
 [PlacementMode]
+RecentlyPlaced=/Game/Art/MadHatter.MadHatter;
+RecentlyPlaced=/Game/Art/MadHatterTable.MadHatterTable;
+RecentlyPlaced=/Game/Art/ForestNight.ForestNight;
 RecentlyPlaced=/Game/Art/City1.City1;
 RecentlyPlaced=/Game/Art/City3_Mat.City3_Mat;
 RecentlyPlaced=/Game/Art/ForestCity_Mat.ForestCity_Mat;
@@ -907,9 +910,6 @@ RecentlyPlaced=/Game/SideScrollerBP/Blueprints/MovingWallFace1.MovingWallFace1;
 RecentlyPlaced=/Game/SideScrollerBP/Blueprints/SpikeWallFace.SpikeWallFace;
 RecentlyPlaced=/Game/SideScrollerBP/Blueprints/SpikeWallBack.SpikeWallBack;
 RecentlyPlaced=/Game/SideScrollerBP/Blueprints/destroy.destroy;
-RecentlyPlaced=/Game/Geometry/Meshes/TemplateFloor.TemplateFloor;
-RecentlyPlaced=/Game/Geometry/Meshes/1M_Cube_Chamfer.1M_Cube_Chamfer;
-RecentlyPlaced=/Game/SideScrollerBP/Blueprints/BluePrintFL/SpikeThatGOesUP.SpikeThatGOesUP;
 
 [RootWindow]
 ScreenPosition=X=2755.000 Y=0.000
