--- a/TP3GreyblocksEquipe7/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/TP3GreyblocksEquipe7/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -829,6 +829,20 @@ StaticMeshComponent.AssetUserData=True
 SpikeWallFace_C.Surface Materials=True
 SpikeWallFace_C.Geometry=True
 SpikeWallFace_C.Surface Properties=True
+SpotLight.TransformCommon=True
+SpotLight.Light=True
+SpotLight.Rendering=True
+SpotLight.Lightmass=True
+SpotLight.Performance=True
+SpotLight.LightFunction=True
+SpotLight.Light Profiles=True
+SpotLight.LightShafts=True
+SpotLight.DistanceFieldShadows=True
+SpotLight.RayTracing=True
+SpotLight.Tags=True
+SpotLight.Activation=True
+SpotLight.Cooking=True
+SpotLight.Actor=True
 
 [AssetEditorSubsystem]
 CleanShutdown=False
@@ -890,6 +904,8 @@ MRUItem18=/Game/SideScrollerBP/Maps/Level1/Level
 MRUItem19=/Game/SideScrollerBP/Maps/SideScrollerExampleMap
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
+RecentlyPlaced=/Game/Art/SoldierCard.SoldierCard;
 RecentlyPlaced=/Game/Art/MadHatter.MadHatter;
 RecentlyPlaced=/Game/Art/MadHatterTable.MadHatterTable;
 RecentlyPlaced=/Game/Art/ForestNight.ForestNight;
@@ -908,8 +924,6 @@ RecentlyPlaced=/Game/SideScrollerBP/Blueprints/SpikeTrap.SpikeTrap;
 RecentlyPlaced=/Game/SideScrollerBP/Blueprints/Turret.Turret;
 RecentlyPlaced=/Game/SideScrollerBP/Blueprints/MovingWallFace1.MovingWallFace1;
 RecentlyPlaced=/Game/SideScrollerBP/Blueprints/SpikeWallFace.SpikeWallFace;
-RecentlyPlaced=/Game/SideScrollerBP/Blueprints/SpikeWallBack.SpikeWallBack;
-RecentlyPlaced=/Game/SideScrollerBP/Blueprints/destroy.destroy;
 
 [RootWindow]
 ScreenPosition=X=2755.000 Y=0.000
@@ -1672,7 +1686,7 @@ BlueprintGraph.TimeStamp=2020.09.23-00.49.18
 BlueprintGraph.LastCompileMethod=External
 
 [MessageLog]
-LastLogListing=MapCheck
+LastLogListing=LightingResults
 
 [DetailCustomWidgetExpansion]
 K2Node_VariableGet=K2Node_VariableGet.DefaultValueCategory.None,
