Level 01 Lightning et decor

--- a/TP3GreyblocksEquipe7/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/TP3GreyblocksEquipe7/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -843,6 +843,20 @@ SpotLight.Tags=True
 SpotLight.Activation=True
 SpotLight.Cooking=True
 SpotLight.Actor=True
+PointLight.TransformCommon=True
+PointLight.Light=True
+PointLight.Rendering=True
+PointLight.Lightmass=True
+PointLight.Performance=True
+PointLight.LightFunction=True
+PointLight.Light Profiles=True
+PointLight.LightShafts=True
+PointLight.DistanceFieldShadows=True
+PointLight.RayTracing=True
+PointLight.Tags=True
+PointLight.Activation=True
+PointLight.Cooking=True
+PointLight.Actor=True
 
 [AssetEditorSubsystem]
 CleanShutdown=False
@@ -904,6 +918,7 @@ MRUItem18=/Game/SideScrollerBP/Maps/Level1/Level
 MRUItem19=/Game/SideScrollerBP/Maps/SideScrollerExampleMap
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
 RecentlyPlaced=/Game/Art/SoldierCard.SoldierCard;
 RecentlyPlaced=/Game/Art/MadHatter.MadHatter;
@@ -923,7 +938,6 @@ RecentlyPlaced=/Game/Art/Bridge.Bridge;
 RecentlyPlaced=/Game/SideScrollerBP/Blueprints/SpikeTrap.SpikeTrap;
 RecentlyPlaced=/Game/SideScrollerBP/Blueprints/Turret.Turret;
 RecentlyPlaced=/Game/SideScrollerBP/Blueprints/MovingWallFace1.MovingWallFace1;
-RecentlyPlaced=/Game/SideScrollerBP/Blueprints/SpikeWallFace.SpikeWallFace;
 
 [RootWindow]
 ScreenPosition=X=2755.000 Y=0.000
