Level3 Final touch
Modification du level 3 pour qu'il soit complet avec la lumiere et etc

--- a/TP3GreyblocksEquipe7/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/TP3GreyblocksEquipe7/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -884,6 +884,12 @@ SpikeCP_C.Replication=True
 SpikeCP_C.Collision=True
 SpikeCP_C.Input=True
 SpikeCP_C.Actor=True
+TurretDelay_C.TransformCommon=True
+TurretDelay_C.Rendering=True
+TurretDelay_C.Replication=True
+TurretDelay_C.Collision=True
+TurretDelay_C.Input=True
+TurretDelay_C.Actor=True
 
 [AssetEditorSubsystem]
 CleanShutdown=True
@@ -924,11 +930,11 @@ MovementComponent="\"Object.Tags.ComponentTags\" "
 LightmassImportanceVolume="\"Object.Collision.BrushComponent.Object.Tags.ComponentTags\" "
 
 [ContentBrowserRecent]
-MRUItem0=/Game/SideScrollerBP/Blueprints/BluePrintFL/SpikeCP
-MRUItem1=/Game/SideScrollerBP/Blueprints/Checkpoint
-MRUItem2=/Game/SideScrollerBP/Blueprints/BluePrintFL/SpikeThatGOesUP
-MRUItem3=/Game/Levels/TP3_FelixLevesque_Level03
-MRUItem4=/Game/Levels/TP3_GenevieveBellemare_Level01
+MRUItem0=/Game/Levels/TP3_FelixLevesque_Level03
+MRUItem1=/Game/Levels/TP3_GenevieveBellemare_Level01
+MRUItem2=/Game/SideScrollerBP/Blueprints/BluePrintFL/SpikeCP
+MRUItem3=/Game/SideScrollerBP/Blueprints/Checkpoint
+MRUItem4=/Game/SideScrollerBP/Blueprints/BluePrintFL/SpikeThatGOesUP
 MRUItem5=/Game/Levels/TP3_AlexisDesbiens_Level02
 MRUItem6=/Game/SideScrollerBP/Blueprints/SpinningSpikeTrap
 MRUItem7=/Game/SideScrollerBP/Blueprints/SideScrollerCharacter
@@ -946,14 +952,17 @@ MRUItem18=/Game/SideScrollerBP/Maps/Level1/Level1
 MRUItem19=/Game/SideScrollerBP/Blueprints/MovingWallFace1
 
 [PlacementMode]
-RecentlyPlaced=/Game/SideScrollerBP/Blueprints/Checkpoint.Checkpoint;
-RecentlyPlaced=/Game/SideScrollerBP/Blueprints/BluePrintFL/SpikeThatGOesUP.SpikeThatGOesUP;
+RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
+RecentlyPlaced=/Script/Engine.TextRenderActor;/Engine/Transient.ActorFactoryTextRender_0
 RecentlyPlaced=/Game/SideScrollerBP/Blueprints/SpikeTrap.SpikeTrap;
+RecentlyPlaced=/Game/SideScrollerBP/Blueprints/Checkpoint.Checkpoint;
 RecentlyPlaced=/Game/SideScrollerBP/Blueprints/Turret/ProjectileKillBox.ProjectileKillBox;
+RecentlyPlaced=/Game/SideScrollerBP/Blueprints/Turret/Turret.Turret;
+RecentlyPlaced=/Game/SideScrollerBP/Blueprints/Turret/TurretDelay.TurretDelay;
+RecentlyPlaced=/Game/SideScrollerBP/Blueprints/BluePrintFL/SpikeThatGOesUP.SpikeThatGOesUP;
 RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
 RecentlyPlaced=/Game/SideScrollerBP/Blueprints/SpinningSpikeTrap.SpinningSpikeTrap;
 RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Game/Art/SoldierCard.SoldierCard;
 RecentlyPlaced=/Game/Art/MadHatter.MadHatter;
 RecentlyPlaced=/Game/Art/MadHatterTable.MadHatterTable;
@@ -963,9 +972,6 @@ RecentlyPlaced=/Game/Art/City3_Mat.City3_Mat;
 RecentlyPlaced=/Game/Art/ForestCity_Mat.ForestCity_Mat;
 RecentlyPlaced=/Game/Art/ForestWonderland_Mat.ForestWonderland_Mat;
 RecentlyPlaced=/Game/Art/City2.City2;
-RecentlyPlaced=/Game/Art/City3.City3;
-RecentlyPlaced=/Game/Art/ForestWonderland2.ForestWonderland2;
-RecentlyPlaced=/Game/Art/CloningArea.CloningArea;
 
 [RootWindow]
 ScreenPosition=X=855.000 Y=17.000
@@ -1728,7 +1734,7 @@ BlueprintGraph.TimeStamp=2020.09.23-00.49.18
 BlueprintGraph.LastCompileMethod=External
 
 [MessageLog]
-LastLogListing=LightingResults
+LastLogListing=MapCheck
 
 [DetailCustomWidgetExpansion]
 K2Node_VariableGet=K2Node_VariableGet.DefaultValueCategory.None,
