--- a/TP3GreyblocksEquipe7/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/TP3GreyblocksEquipe7/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -116,9 +116,9 @@ CurrentRotGridSize=2
 CurrentPosGridSize=1
 
 [MRU]
-MRUItem0=/Game/Levels/TP3_FelixLevesque_Level03
+MRUItem0=/Game/Levels/TP3_AlexisDesbiens_Level02
 MRUItem1=/Game/Levels/TP3_GenevieveBellemare_Level01
-MRUItem2=/Game/Levels/TP3_AlexisDesbiens_Level02
+MRUItem2=/Game/Levels/TP3_FelixLevesque_Level03
 MRUItem3=/Game/Levels/testLevel
 MRUItem4=/Game/Levels/TP3_YourName_Level03
 MRUItem5=/Game/SideScrollerBP/Maps/Level3/Level3
@@ -152,10 +152,10 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/SideScrollerBP/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/Level2_Art/Level2
 
 [EditorStartup]
-LastLevel=/Game/Levels/TP3_FelixLevesque_Level03
+LastLevel=/Game/Levels/TP3_AlexisDesbiens_Level02
 
 [DetailCategories]
 WorldSettings.PrecomputedVisibility=True
@@ -890,6 +890,25 @@ TurretDelay_C.Replication=True
 TurretDelay_C.Collision=True
 TurretDelay_C.Input=True
 TurretDelay_C.Actor=True
+TurretVide_C.TransformCommon=True
+TurretVide_C.Rendering=True
+TurretVide_C.Replication=True
+TurretVide_C.Collision=True
+TurretVide_C.Input=True
+TurretVide_C.Actor=True
+AtmosphericFog.TransformCommon=True
+AtmosphericFog.Atmosphere=True
+AtmosphericFog.Sun=True
+AtmosphericFog.Ground=True
+AtmosphericFog.Rendering=True
+AtmosphericFog.Tags=True
+AtmosphericFog.Activation=True
+AtmosphericFog.Cooking=True
+AtmosphericFog.Replication=True
+AtmosphericFog.Actor=True
+MaterialEditorInstanceConstant.ParameterGroups=True
+MaterialEditorInstanceConstant.General=True
+MaterialEditorInstanceConstant.Previewing=True
 
 [AssetEditorSubsystem]
 CleanShutdown=True
@@ -930,29 +949,38 @@ MovementComponent="\"Object.Tags.ComponentTags\" "
 LightmassImportanceVolume="\"Object.Collision.BrushComponent.Object.Tags.ComponentTags\" "
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Levels/TP3_FelixLevesque_Level03
-MRUItem1=/Game/Levels/TP3_GenevieveBellemare_Level01
-MRUItem2=/Game/SideScrollerBP/Blueprints/BluePrintFL/SpikeCP
-MRUItem3=/Game/SideScrollerBP/Blueprints/Checkpoint
-MRUItem4=/Game/SideScrollerBP/Blueprints/BluePrintFL/SpikeThatGOesUP
-MRUItem5=/Game/Levels/TP3_AlexisDesbiens_Level02
-MRUItem6=/Game/SideScrollerBP/Blueprints/SpinningSpikeTrap
-MRUItem7=/Game/SideScrollerBP/Blueprints/SideScrollerCharacter
-MRUItem8=/Game/Levels/testLevel
-MRUItem9=/Game/SideScrollerBP/Maps/SwitchToLevel02
-MRUItem10=/Game/SideScrollerBP/Blueprints/destroy
-MRUItem11=/Game/SideScrollerBP/Blueprints/Projectile
-MRUItem12=/Game/SideScrollerBP/Blueprints/Turret
-MRUItem13=/Game/SideScrollerBP/Blueprints/SpikeTrap
-MRUItem14=/Game/SideScrollerBP/Maps/SwitchToLevel03
-MRUItem15=/Game/SideScrollerBP/Blueprints/SideScrollerGameMode
-MRUItem16=/Game/Levels/TP3_YourName_Level03
-MRUItem17=/Game/SideScrollerBP/Maps/Level3/Level3
-MRUItem18=/Game/SideScrollerBP/Maps/Level1/Level1
-MRUItem19=/Game/SideScrollerBP/Blueprints/MovingWallFace1
+MRUItem0=/Game/SideScrollerBP/Blueprints/Turret/EBleu
+MRUItem1=/Game/Levels/TP3_AlexisDesbiens_Level02
+MRUItem2=/Game/Levels/TP3_GenevieveBellemare_Level01
+MRUItem3=/Game/Levels/TP3_FelixLevesque_Level03
+MRUItem4=/Game/SideScrollerBP/Blueprints/BluePrintFL/SpikeCP
+MRUItem5=/Game/SideScrollerBP/Blueprints/Checkpoint
+MRUItem6=/Game/SideScrollerBP/Blueprints/BluePrintFL/SpikeThatGOesUP
+MRUItem7=/Game/SideScrollerBP/Blueprints/SpinningSpikeTrap
+MRUItem8=/Game/SideScrollerBP/Blueprints/SideScrollerCharacter
+MRUItem9=/Game/Levels/testLevel
+MRUItem10=/Game/SideScrollerBP/Maps/SwitchToLevel02
+MRUItem11=/Game/SideScrollerBP/Blueprints/destroy
+MRUItem12=/Game/SideScrollerBP/Blueprints/Projectile
+MRUItem13=/Game/SideScrollerBP/Blueprints/Turret
+MRUItem14=/Game/SideScrollerBP/Blueprints/SpikeTrap
+MRUItem15=/Game/SideScrollerBP/Maps/SwitchToLevel03
+MRUItem16=/Game/SideScrollerBP/Blueprints/SideScrollerGameMode
+MRUItem17=/Game/Levels/TP3_YourName_Level03
+MRUItem18=/Game/SideScrollerBP/Maps/Level3/Level3
+MRUItem19=/Game/SideScrollerBP/Maps/Level1/Level1
 
 [PlacementMode]
+RecentlyPlaced=/Game/Level2_Art/Level2/clean-metal-texture-background-illustration-art-80393882.clean-metal-texture-background-illustration-art-80393882;
+RecentlyPlaced=/Game/Level2_Art/Level2/clean-metal-texture-background-illustration-art-80393882_Mat.clean-metal-texture-background-illustration-art-80393882_Mat;
+RecentlyPlaced=/Game/Level2_Art/Level2/30271682-clean-concrete-texture.30271682-clean-concrete-texture;
+RecentlyPlaced=/Game/Level2_Art/Level2/30271682-clean-concrete-texture_Mat.30271682-clean-concrete-texture_Mat;
+RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
+RecentlyPlaced=/Game/Level2_Art/Level2/dirty-metal-texture_1048-4784.dirty-metal-texture_1048-4784;
+RecentlyPlaced=/Game/StarterContent/Materials/M_AssetPlatform.M_AssetPlatform;
+RecentlyPlaced=/Game/Level2_Art/Level2/dirty-metal-texture_1048-4784_Mat.dirty-metal-texture_1048-4784_Mat;
+RecentlyPlaced=/Game/Level2_Art/Level2/used_grungy_metal_texture_Mat.used_grungy_metal_texture_Mat;
 RecentlyPlaced=/Script/Engine.TextRenderActor;/Engine/Transient.ActorFactoryTextRender_0
 RecentlyPlaced=/Game/SideScrollerBP/Blueprints/SpikeTrap.SpikeTrap;
 RecentlyPlaced=/Game/SideScrollerBP/Blueprints/Checkpoint.Checkpoint;
@@ -960,21 +988,12 @@ RecentlyPlaced=/Game/SideScrollerBP/Blueprints/Turret/ProjectileKillBox.Projecti
 RecentlyPlaced=/Game/SideScrollerBP/Blueprints/Turret/Turret.Turret;
 RecentlyPlaced=/Game/SideScrollerBP/Blueprints/Turret/TurretDelay.TurretDelay;
 RecentlyPlaced=/Game/SideScrollerBP/Blueprints/BluePrintFL/SpikeThatGOesUP.SpikeThatGOesUP;
-RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
 RecentlyPlaced=/Game/SideScrollerBP/Blueprints/SpinningSpikeTrap.SpinningSpikeTrap;
 RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Art/SoldierCard.SoldierCard;
-RecentlyPlaced=/Game/Art/MadHatter.MadHatter;
-RecentlyPlaced=/Game/Art/MadHatterTable.MadHatterTable;
-RecentlyPlaced=/Game/Art/ForestNight.ForestNight;
-RecentlyPlaced=/Game/Art/City1.City1;
-RecentlyPlaced=/Game/Art/City3_Mat.City3_Mat;
-RecentlyPlaced=/Game/Art/ForestCity_Mat.ForestCity_Mat;
-RecentlyPlaced=/Game/Art/ForestWonderland_Mat.ForestWonderland_Mat;
-RecentlyPlaced=/Game/Art/City2.City2;
 
 [RootWindow]
-ScreenPosition=X=855.000 Y=17.000
+ScreenPosition=X=2775.000 Y=17.000
 WindowSize=X=1349.000 Y=720.000
 InitiallyMaximized=True
 
@@ -1006,7 +1025,7 @@ FourPanes2x2.Viewport 2.MaximizedViewport=FourPanes2x2.Viewport 2.Viewport1
 bHideUnrelatedNodes=False
 
 [Directories2]
-UNR=C:/Users/felix/Documents/Cegep/TPAIWL/TP3_LevelDesign_AD_GB_FL/TP3GreyblocksEquipe7/Content/Levels
+UNR=../../../../../../Users/Alexis/Documents/GitHub/TP3_LevelDesign_AD_GB_FL/TP3GreyblocksEquipe7/Content/Levels
 BRUSH=D:/VG Projects/TP3_Template/Content/
 FBX=D:/VG Projects/TP3_Template/Content/
 FBXAnim=D:/VG Projects/TP3_Template/Content/
@@ -1734,7 +1753,7 @@ BlueprintGraph.TimeStamp=2020.09.23-00.49.18
 BlueprintGraph.LastCompileMethod=External
 
 [MessageLog]
-LastLogListing=MapCheck
+LastLogListing=LightingResults
 
 [DetailCustomWidgetExpansion]
 K2Node_VariableGet=K2Node_VariableGet.DefaultValueCategory.None,
@@ -1753,6 +1772,8 @@ Character=
 Widget=K2Node_VariableGet.DefaultValueCategory.None,
 Projectile_C=K2Node_VariableGet.DefaultValueCategory.None,
 StaticMeshComponent=StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,
+MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,
+MaterialInstanceConstant=
 
 [AssetEditorToolkitTabLocation]
 /Game/SideScrollerBP/Blueprints/SideScrollerCharacter.SideScrollerCharacter=1
@@ -1769,6 +1790,7 @@ StaticMeshComponent=StaticMeshComponent.Rendering.TextureStreaming,StaticMeshCom
 /Game/SideScrollerBP/Blueprints/destroy.destroy=1
 /Game/SideScrollerBP/Blueprints/Checkpoint.Checkpoint=1
 /Game/SideScrollerBP/Blueprints/SpinningSpikeTrap.SpinningSpikeTrap=1
+/Game/SideScrollerBP/Blueprints/Turret/EBleu.EBleu=1
 
 [DetailCategoriesAdvanced]
 K2Node_VariableGet.Variable=False
@@ -1791,5 +1813,66 @@ Value=1.000000
 
 [SuppressableDialogs]
 ChangeVariableType_Warning=False
+
+[SurfaceSelection]
+PreserveScaleRatio=True
+
+[MaterialInstanceEditor]
+bShowGrid=False
+bDrawGrid=False
+PrimType=1
+
+[/Script/UnrealEd.MaterialStatsOptions]
+bPlatformUsed[0]=1
+bPlatformUsed[1]=0
+bPlatformUsed[2]=0
+bPlatformUsed[3]=0
+bPlatformUsed[4]=0
+bPlatformUsed[5]=0
+bPlatformUsed[6]=0
+bPlatformUsed[7]=0
+bPlatformUsed[8]=0
+bPlatformUsed[9]=0
+bPlatformUsed[10]=0
+bPlatformUsed[11]=0
+bPlatformUsed[12]=0
+bPlatformUsed[13]=0
+bPlatformUsed[14]=0
+bPlatformUsed[15]=0
+bPlatformUsed[16]=0
+bPlatformUsed[17]=0
+bPlatformUsed[18]=0
+bPlatformUsed[19]=0
+bPlatformUsed[20]=0
+bPlatformUsed[21]=0
+bPlatformUsed[22]=0
+bPlatformUsed[23]=0
+bPlatformUsed[24]=0
+bPlatformUsed[25]=0
+bPlatformUsed[26]=0
+bPlatformUsed[27]=0
+bPlatformUsed[28]=0
+bPlatformUsed[29]=0
+bPlatformUsed[30]=0
+bPlatformUsed[31]=0
+bPlatformUsed[32]=0
+bPlatformUsed[33]=0
+bPlatformUsed[34]=0
+bPlatformUsed[35]=0
+bPlatformUsed[36]=0
+bPlatformUsed[37]=0
+bPlatformUsed[38]=0
+bPlatformUsed[39]=0
+bPlatformUsed[40]=0
+bPlatformUsed[41]=0
+bPlatformUsed[42]=0
+bPlatformUsed[43]=0
+bPlatformUsed[44]=0
+bPlatformUsed[45]=0
+bPlatformUsed[46]=0
+bPlatformUsed[47]=0
+bMaterialQualityUsed[0]=0
+bMaterialQualityUsed[1]=1
+bMaterialQualityUsed[2]=0
 
 
